--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_test
+spring.datasource.url=jdbc:mysql://farmpi.local:3306/spring_test
 spring.datasource.username=spring_user
 spring.datasource.password=testtest
